--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,20 +18,16 @@ flutter:
         fileName: audioplayers_web.dart
 
 dependencies:
-  uuid: ^2.2.2
-  path_provider: ^1.6.22
+  uuid: ^3.0.1
+  path_provider: ^2.0.1
+  http: ^0.13.0
+  test: ^1.16.0
   flutter:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
 
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  http: ^0.12.2
-  test: ^1.15.4
-
 environment:
-  sdk: ">=2.6.0 <3.0.0"
-  flutter: ">=1.10.0"
+  sdk: '>=2.12.0-0 <3.0.0'
+  flutter: '>=1.22.0'
 
